cmake_minimum_required(VERSION 3.29)
project(cote_study)

set(CMAKE_CXX_STANDARD 17)

add_executable(problem1 pre/problem1.cpp)
add_executable(problem2 pre/problem2.cpp)
add_executable(problem3 pre/problem3.cpp)
add_executable(problem4 pre/problem4.cpp)
add_executable(problem5 pre/problem5.cpp)
add_executable(problem6 pre/problem6.cpp)
add_executable(problem7 pre/problem7.cpp)
add_executable(problem8 pre/problem8.cpp)
add_executable(problem9 pre/problem9.cpp)
add_executable(problem10 pre/problem10.cpp)
add_executable(problem11 pre/problem11.cpp)
add_executable(problem12 pre/problem12.cpp)
add_executable(problem13 pre/problem13.cpp)
add_executable(problem14 pre/problem14.cpp)
add_executable(problem15 pre/problem15.cpp)
add_executable(problem16 pre/problem16.cpp)
add_executable(problem17 pre/problem17.cpp)
add_executable(problem18 pre/problem18.cpp)
add_executable(problem19 pre/problem19.cpp)
add_executable(problem20 pre/problem20.cpp)
add_executable(problem21 pre/problem21.cpp)
add_executable(problem22 pre/problem22.cpp)
add_executable(problem23 pre/problem23.cpp)
add_executable(problem24 pre/problem24.cpp)
add_executable(problem25 pre/problem25.cpp)
add_executable(problem26 pre/problem26.cpp)
add_executable(problem27 pre/problem27.cpp)
add_executable(problem28 pre/problem28.cpp)
add_executable(problem29 pre/problem29.cpp)
add_executable(problem30 pre/problem30.cpp)
add_executable(problem31 pre/problem31.cpp)
add_executable(problem32 pre/problem32.cpp)
add_executable(problem33 pre/problem33.cpp)
add_executable(problem34 pre/problem34.cpp)
add_executable(problem35 pre/problem35.cpp)
add_executable(problem36 pre/problem36.cpp)
add_executable(problem37 pre/problem37.cpp)
add_executable(problem38 pre/problem38.cpp)
add_executable(problem39 pre/problem39.cpp)
add_executable(problem40 pre/problem40.cpp)
add_executable(problem41 pre/problem41.cpp)
add_executable(problem42 pre/problem42.cpp)
add_executable(problem43 pre/problem43.cpp)
add_executable(problem44 pre/problem44.cpp)
add_executable(problem45 pre/problem45.cpp)
add_executable(problem46 pre/problem46.cpp)
add_executable(problem47 pre/problem47.cpp)
add_executable(problem48 pre/problem48.cpp)
add_executable(problem49 pre/problem49.cpp)
add_executable(problem50 pre/problem50.cpp)
add_executable(problem51 pre/problem51.cpp)
add_executable(problem52 pre/problem52.cpp)
add_executable(problem53 pre/problem53.cpp)
add_executable(problem54 pre/problem54.cpp)
add_executable(problem55 pre/problem55.cpp)
add_executable(problem56 pre/problem56.cpp)
add_executable(problem57 pre/problem57.cpp)
add_executable(problem58 pre/problem58.cpp)
add_executable(problem59 pre/problem59.cpp)
add_executable(problem60 pre/problem60.cpp)
add_executable(problem61 pre/problem61.cpp)
add_executable(problem62 pre/problem62.cpp)
add_executable(problem63 pre/problem63.cpp)
add_executable(problem64 pre/problem64.cpp)
add_executable(problem65 pre/problem65.cpp)
add_executable(problem66 pre/problem66.cpp)
add_executable(problem67 pre/problem67.cpp)
add_executable(problem68 pre/problem68.cpp)
add_executable(problem69 pre/problem69.cpp)
add_executable(problem70 pre/problem70.cpp)
add_executable(card 카드.cpp)
add_executable(balloon 풍선터뜨리기.cpp)
add_executable(printer 프린터큐.cpp)
add_executable(magic 센티와마법의뿅망치.cpp)
add_executable(gift 크리스마스선물.cpp)
add_executable(vote 국회의원선거.cpp)
add_executable(gas 연료채우기.cpp)
add_executable(virus 바이러스.cpp)
add_executable(organic 유기농배추.cpp)